# shortener_user_api

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/adapters/: __init__.py  abc_repository.py  repository.py
backend/app/adapters/base/: __init__.py  abc_repository.py  repository.py
backend/app/adapters/domain/: __init__.py  users_repository.py
backend/app/api/: __init__.py  dependencies.py  exceptions.py  router_setup.py  routers_setup.py
backend/app/api/healthcheck/: data_types.py  routers.py
backend/app/api/middlewares/: __init__.py  error_middleware.py
backend/app/api/routers/: __init__.py  dependencies.py
backend/app/api/routers/auth/: __init__.py  auth_utils.py  routers.py
backend/app/api/routers/healthcheck/: __init__.py  routers.py
backend/app/api/routers/users/: __init__.py  auth_utils.py  routers.py
backend/app/api/users/: auth_utils.py  models.py  repository.py  routers.py  services.py
backend/app/core/: base.py
backend/app/models/: __init__.py  base.py  users.py
backend/app/schemas/: tokens.py  users.py
backend/app/service_layer/: abc_unit_of_work.py  exceptions.py  unit_of_work.py
backend/app/service_layer/services/: __init__.py  users.py
backend/app/service_layer/services/users/: users.py
backend/app/service_layer/unit_of_work/: __init__.py  abc_uow.py  uow.py
backend/app/settings/: __init__.py  app_setup.py  config.py  database.py  logger_config.yaml  metrics_setup.py  sentry_setup.py
backend/env/: .env.example
backend/migrations/: env.py
backend/migrations/versions/: 2024_03_02_1524-5befb8205dbc_init.py  2024_03_04_1757-c8bc1c2b5ed6_init2.py  2024_03_06_2155-c3d65fccc749_init.py
backend/scripts/: run_app.sh  run_migrations.sh  run_tests.sh
