[tool.poetry]
name = "shortener user api"
version = "0.1.0"
description = ""
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fastapi = {extras = ["all"], version = "^0.102.0"}
python-json-logger = "^2.0.7"
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
prometheus-fastapi-instrumentator = "^6.1.0"

gunicorn = "^20.1.0"
uvicorn = "^0.23.1"

sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-dotenv = "^0.5.2"
coverage = "^7.3.0"
httpx = "^0.24.1"

pre-commit = "^3.3.0"
black = "^23.9.1"
ruff = "^0.0.291"
isort = "^5.12.0"
bandit = "^1.7.5"
pyright = "^1.1.327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
extend = "linters/black.toml"

[tool.ruff]
extend = "linters/ruff.toml"

[tool.isort]
profile = "black"
line_length = 79

[tool.pyright]
extend = "linters/pyright.toml"

[tool.bandit]
extend = "linters/bandit.toml"
